# Auto-Calendar-Agent

./: .env.example  .gitignore  Auto Calendar Deadline Manager Agent Challenge.pptx  AutoCalendarAgent.ipynb  DeadlineManagerAgent.ipynb  EY_Challenge_Results.md  GOOGLE_COLAB_INSTRUCTIONS.md  Makefile  README.md  SUBMISSION_SUMMARY.md  deadline_agent_backend.py  debug_patterns.py  dev-setup.sh  main.py  pyproject.toml  requirements.txt  streamlit_app.py  test_agent.py  test_enhanced_date_inference.py  test_notebook_fixes.py  test_streamlit_app.py  verify_api_cleanup.py
Data/: Aviso de obrigacao declarativa em falta para empresa ACE.docx
config/: .env.example  .pre-commit-config.yaml
data/: 00 Template AT.docx  Whiteboard IES To Do.jfif  Whiteboard IRS Daily Meeting To Do and WIP.jfif  Whiteboard IRS To Do.jfif  Whiteboard Modelos 22 To Do.jfif
docs/: API.md
notebooks/: AutoCalendarAgent.ipynb  AutoCalendarAgent2222.ipynb
reports/: AI_MODEL_INTEGRATION_COMPLETE.md  FINAL_COMPLETION_REPORT.md  PRESENTATION_OUTLINE.md  REPOSITORY_REORGANIZATION_COMPLETE.md  RUFF_INTEGRATION_COMPLETE.md
scripts/: dev-workflow.sh  start.sh
src/ey_deadline_manager/: __init__.py
src/ey_deadline_manager/app/: __init__.py  streamlit_app.py  streamlit_app_fixed.py  streamlit_app_old.py
src/ey_deadline_manager/core/: __init__.py  deadline_agent_backend.py
src/ey_deadline_manager/models/: __init__.py
src/ey_deadline_manager/utils/: __init__.py
tests/: __init__.py  test_agent.py  test_streamlit_app.py
